# CMakeList.txt : CMake project for ParallelAlgorithms, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ParallelAlgorithms")

# Add source to this project's executable.
add_executable (ParallelAlgorithms "ParallelAlgorithms.cpp" "ParallelAlgorithms.h")

# TODO: Add tests and install targets if needed.
